fix(ui): fix code block line wrapping

--- a/src/components/Article/CodeBlock.css
+++ b/src/components/Article/CodeBlock.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.code-block-container code {
+  white-space: pre-wrap !important;
+}
+
 .copy-button {
   right: 3px;
 }
